align fix

--- a/style.css
+++ b/style.css
@@ -519,7 +519,6 @@ header .container1 nav a:hover, header .container1 nav ul li.current_page_item a
 .scontainer .content {
     width: 1200px;
     height: auto;
-    border-top: 1px solid #1f1f24;
 }
 .scontainer .content h4 {
     float: left;
@@ -528,18 +527,18 @@ header .container1 nav a:hover, header .container1 nav ul li.current_page_item a
 .scontainer .content .left {
     width: 513px;
     height: 500px;
-    margin-top: 20px;
+    margin-top: 0px;
     float: right;
     text-align: right;
 }
 .scontainer .content .left .top {
     width: 100%;
-    height: 300px;
+    height: 235px;
     margin: 0;
 }
 .scontainer .content .left .top img {
     width: 100%;
-    height: 100%}
+    height: 300px}
 .scontainer .content .left .bot {
     width: 97%;
     height: 136px;
@@ -560,8 +559,11 @@ margin-right:30px;
 .scontainer .content .right .up {
     color: #9a8e55;
     width: 100%;
-    height: 300px;
+    height: 235px;
     //overflow-y: scroll;
+}
+.scontainer .content .right .up h1{
+    margin-top: 0px;
 }
 .up p {
     color: #1f1f24;
@@ -572,7 +574,7 @@ height:500px;
 background:#959595;
 float:right;
 margin-right: 10px;
-margin-top: 20px;
+margin-top: 0px;
 }
 .scontainer .content .right .down {
     width: 100%;
@@ -1506,6 +1508,7 @@ ul.slider {
 }
 .bright .bcontent p {
     font-family: tahoma;
+    margin-bottom: 20px;
 }
 .blogcontent .bright.active {
     display: block;
